--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,9 @@ html, body{
 }
 
 /*NAVBAR*/
-    #brand-logo{
-        width: 60px;
-
-    }
-
+#brand-logo{
+    width: 60px;
+}
 .navbar.navbar-expand-lg{
     background-color:black;
     font-weight: bold;
@@ -16,7 +14,13 @@ html, body{
 
 .navbar.navbar-expand-lg a{
     color:#fff;
+}
 
+.nav-brand-search {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    color: #fff;
 }
 
 /*HOME*/
@@ -30,7 +34,6 @@ html, body{
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 #main-banner h1{
     color: #fff;
@@ -38,10 +41,16 @@ html, body{
     text-align: center;
     padding: 30px;
     text-transform: uppercase;
-    width: 550px;
-    font-size: 50px;
+    width: 500px;
+    font-size: 40px;
+    border-radius: 15px;
+    
 }
-
+.h2, h2 {
+    text-align: center;
+    font-weight: bold;
+    margin-top: auto;
+}
 #main-conteiner{
     margin: bottom 100px;
     padding: 50px;
@@ -78,7 +87,7 @@ html, body{
 
 .alert{
     border-radius: 0;
-    text-align: center;
+    text-align: left;
     margin-bottom: 0;
     font-weight: bold;
     padding: 20px;
@@ -86,12 +95,63 @@ html, body{
 }
 .alert.alert-success{
     border: 2px solid;
+    text-align: left;
 }
 .alert.alert-warnig{
+    text-align: left;
     border:2px solid;
 }
 .alert p {
     margin-bottom: 0;
+}
+/*SEARCHORDER*/
+#main-banner2{
+    background-image: url("../img/pizza.png");
+    height: 300px;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    background-position-y: -300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#main-banner2 h1{
+    color: #fff;
+    background-color: black;
+    text-align:center;
+    padding: 30px;
+    border-radius: 15px;
+    font-size: 40px;
+    text-transform: uppercase;
+    
+    
+}
+.h2, h2{
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+}
+.main-banner h1{
+    color: #fff;
+    background-color: black;
+    text-align: center;
+    padding: 30px;
+    text-transform: uppercase;
+    width: 500px;
+    font-size: 50px;
+}
+
+.btn.btn-primary{
+    background-color: black;
+    border-color: black;
+    margin-top: 10px;
+    text-transform: uppercase;
+}
+#search-form{
+    max-width: 550px;
+    margin: 0 auto;
+    text-align: left;
 }
 
 /*DASHBOARD*/
