--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,17 @@ html, body{
     margin-bottom: 0;
     text-align: center;
 }
+/* Custom Alert */
+.alert-custom {
+    text-align: left;
+    margin-bottom: 0;
+    font-weight: bold;
+    padding: 20px;
+    font-size: 18px;
+    text-align: center;
+    border: 1px solid black;
+    background-color:transparent;
+}
 /*SEARCHORDER*/
 #main-banner2{
     background-image: url("../img/pizza.png");
@@ -170,8 +181,12 @@ html, body{
     display: flex;
     flex-direction: row;
 }
+
 .status-input{
     width: 65%;
+    text-align: center;
+    display: block;
+    width: 100%;
 }
 /*FOOTER*/
 footer{
