--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,18 @@ html, body{
     border: 1px solid black;
     background-color:transparent;
 }
+.alert-custom-searchNo {
+    text-align: left;
+    margin-bottom: 0;
+    font-weight: bold;
+    padding: 20px;
+    font-size: 18px;
+    text-align: center;
+    border: 1px solid red;
+    background-color:transparent;
+    text-decoration-color: red;
+    
+}
 /*SEARCHORDER*/
 #main-banner2{
     background-image: url("../img/pizza.png");
